# tsurugi

./: .env.example  .gitignore  LICENSE  SQL_ANSWERS.md  SQL_PRACTICE.md  pyproject.toml  run.py
.github/workflows/: python-tests.yml
docs/: PERMISSIONS.md  SAFETY.md
script/: analyze_words.py  check_progress.py  watch_progress.py
src/tsurugi/: __main__.py  bot.py  config.py  database.py  mcserver.py  server_info.json  server_info.jsonc
src/tsurugi/config/: config.py  server_info.json  user_mappings.json
src/tsurugi/helpers/: __init__.py  permissions.py  safety.py
tests/: test.py
