[project]
name = "tsurugi"
version = "0.1.0"
description = "Discord bot for message archiving, SQL queries, and data visualization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.6.4",
    "matplotlib>=3.10.8",
    "numpy>=2.2.1",
    "python-dotenv>=1.2.1",
    "textblob>=0.18.0",
]

[project.scripts]
tsurugi = "tsurugi.__main__:main"
